--- a/donate.html
+++ b/donate.html
@@ -48,19 +48,6 @@
             </div>
         </div>
     </section>
-    <nav class="navbar navbar-light navbar-expand-xl fixed-top bg-white clean-navbar" style="height: 100px;padding: 6px;background: rgb(0,0,0);margin: 0px;width: 100%;">
-        <div class="container"><img src="assets/img/icon.png" style="padding-right: 19px;"><a class="navbar-brand logo" href="index.html" style="font-size: 24px;font-family: 'Archivo Black', sans-serif;color: rgb(155,157,37);">Gondesan US<br>功德山寺</a><button data-toggle="collapse"
-                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1" style="background: #ffffff;width: 100%;margin-top: 0px;padding-top: 0px;padding-right: 0px;">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item text-center"><a class="nav-link text-center" href="index.html" style="font-family: Montserrat, sans-serif;color: rgba(155,157,37,0.5);font-size: 18px;">Home (<strong>主頁)</strong><br></a></li>
-                    <li class="nav-item"><a class="nav-link text-center" href="events.html" style="color: rgba(155,157,37,0.5);font-family: Montserrat, sans-serif;font-size: 18px;">Events (<strong>活動)</strong><br></a></li>
-                    <li class="nav-item"><a class="nav-link text-center" href="about-us.html" style="color: rgba(155,157,37,0.5);font-family: Montserrat, sans-serif;font-size: 18px;">About Us (<strong>關於我們)</strong><br></a></li>
-                    <li class="nav-item"><a class="nav-link text-center active" href="donate.html" style="color: rgb(155,157,37);font-family: Montserrat, sans-serif;font-size: 18px;">Donate (<strong>捐款)</strong></a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="footer-dark">
         <footer>
             <div class="container">
@@ -86,6 +73,43 @@
                     </div>
                     <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);">
                         <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is a 501 (c)(3)&nbsp;is a 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 item social"><a href="https://www.facebook.com/gondesantw" style="color: rgb(255,255,255);"><i class="icon ion-social-facebook"></i></a><a href="https://www.youtube.com/channel/UCzZ6uIvn1yCF5TUsYdUR5VQ"><i class="icon ion-social-youtube-outline" style="color: rgb(255,255,255);"></i></a>
+                        <p
+                            class="copyright" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;">Developed by Andrew Tam<br>Gondesan © 2020</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;">
+                        <h3>Websites</h3>
+                        <ul>
+                            <li><a href="https://gondesan-en.org">gondesan-en.org</a></li>
+                            <li><a href="http://gondesan.com">gondesan.com</a></li>
+                            <li><a href="https://gondesan.info">gondesan.info</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;">
+                        <h3>About</h3>
+                        <ul>
+                            <li style="font-family: Montserrat, sans-serif;"><a href="about-us.html">About Us</a></li>
+                            <li></li>
+                            <li><a href="https://goo.gl/maps/9mNayRY4WW8QiioX7">Location (Taiwan)</a></li>
+                            <li></li>
+                            <li><a href="donate.html">Donate</a></li>
+                            <li><a href="events.html">Events</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);">
+                        <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
                         <ul>
                             <li></li>
                         </ul>
