--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
                 <div class="col-md-6">
                     <div class="block-heading">
                         <h2 class="text-info">Annual Conference</h2>
-                        <p style="font-size: 18px;color: rgb(255,255,255);">Once a year in Taiwan, we have our annual conference. Listen to Master Khan Ru's talks<br></p>
+                        <p style="font-size: 18px;color: rgb(255,255,255);">Once a year in Taiwan, we have our annual conference. Listen to Master Khan Ru's talks in Taiwan<br></p>
                     </div>
                 </div>
             </div>
@@ -80,13 +80,13 @@
                             <li style="font-family: Montserrat, sans-serif;"><a href="about-us.html">About Us</a></li>
                             <li></li>
                             <li><a href="https://goo.gl/maps/9mNayRY4WW8QiioX7">Location (Taiwan)</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li></li>
                             <li><a href="donate.html">Donate</a></li>
                             <li><a href="events.html">Events</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);">
-                        <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is a 501 (c)(3)&nbsp;is a 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
+                        <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
                         <ul>
                             <li></li>
                         </ul>
