--- a/about-us.html
+++ b/about-us.html
@@ -90,13 +90,13 @@
                             <li style="font-family: Montserrat, sans-serif;"><a href="about-us.html">About Us</a></li>
                             <li></li>
                             <li><a href="https://goo.gl/maps/9mNayRY4WW8QiioX7">Location (Taiwan)</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li></li>
                             <li><a href="donate.html">Donate</a></li>
                             <li><a href="events.html">Events</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item" style="color: rgb(255,255,255);">
-                        <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is a 501 (c)(3)&nbsp;is a 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
+                        <h3 style="font-family: Montserrat, sans-serif;text-align: center;font-size: 15px;">Gondesan is 501(c)(3) nonprofit organization. We are a mission driven religious organization seeking to spread the message of Buddhism and help&nbsp; individuals.<br></h3>
                         <ul>
                             <li></li>
                         </ul>
