--- a/about-us.html
+++ b/about-us.html
@@ -52,10 +52,10 @@
         <h2 class="text-center text-info" style="padding-bottom: 33px;">Music &amp; Religious Chants<br>音乐与宗教圣歌<br></h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Tp-GcHWCO_8" width="560" height="315"></iframe></div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NCaL8re1nSg" width="560" height="315"></iframe></div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/0GgZNhsexQw" width="560" height="315"></iframe></div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Tp-GcHWCO_8" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NCaL8re1nSg" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/0GgZNhsexQw" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315" style="width: 100%;"></iframe></div>
             </div>
         </div>
     </section>
