--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
 
 <body style="height: 1081px;background: rgb(44,43,43);">
     <main class="page"></main>
-    <div style="margin-right: auto;margin-left: auto;height: 340px;width: 600px;margin-top: 127px;border-style: none;">
+    <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;">
         <h2 class="text-center text-info" style="padding-bottom: 33px;text-align: center;">Recent Video Event</h2><iframe width="100%" height="100%" src="https://www.youtube.com/embed?listType=user_uploads&list=gondesan" frameborder="0" allowfullscreen></iframe> </div>
     <section style="margin-top: 138px;">
         <div class="container">
@@ -29,7 +29,7 @@
                 <div class="col-md-6">
                     <div class="block-heading">
                         <h2 class="text-info">Annual Conference</h2>
-                        <p style="font-size: 18px;color: rgb(255,255,255);">Once a year in Taiwan, we have our annual conference. Listen to Master Khan Ru's talks in Taiwan<br></p>
+                        <p style="font-size: 18px;color: rgb(255,255,255);">Once a year in Taiwan, we have our annual conference. Listen to Master Khan Ru's talks<br></p>
                     </div>
                 </div>
             </div>
