--- a/events.html
+++ b/events.html
@@ -20,8 +20,12 @@
 
 <body style="height: 1081px;background: rgb(44,43,43);">
     <main class="page"></main>
-    <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;">
-        <h2 class="text-center text-info" style="padding-bottom: 33px;text-align: center;">Recent Video Event</h2><iframe width="100%" height="100%" src="https://www.youtube.com/embed?listType=user_uploads&list=gondesan" frameborder="0" allowfullscreen></iframe> </div>
+    <div class="container">
+        <div class="col">
+            <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;width: 100%;height: 480px100%;">
+                <h2 class="text-center text-info" style="padding-bottom: 33px;text-align: center;height: 480p;">Recent Video Event</h2><iframe width="100%" height="100%" src="https://www.youtube.com/embed?listType=user_uploads&list=gondesan" frameborder="0" allowfullscreen></iframe> </div>
+        </div>
+    </div>
     <section style="margin-top: 138px;">
         <div class="container">
             <div class="row">
