--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Tp-GcHWCO_8" width="560" height="315" style="width: 100%;"></iframe></div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NCaL8re1nSg" width="560" height="315" style="width: 100%;"></iframe></div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/0GgZNhsexQw" width="560" height="315" style="width: 100%;"></iframe></div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315"></iframe></div>
             </div>
         </div>
     </section>
