--- a/donate.html
+++ b/donate.html
@@ -90,10 +90,10 @@
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="background: #ffffff;width: 100%;margin-top: 0px;padding-top: 0px;padding-right: 0px;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item text-center"><a class="nav-link text-center" href="index.html" style="font-family: Montserrat, sans-serif;color: rgb(155,157,37);font-size: 18px;">Home (<strong>主頁)</strong><br></a></li>
+                    <li class="nav-item text-center"><a class="nav-link text-center" href="index.html" style="font-family: Montserrat, sans-serif;color: rgba(155,157,37,0.5);font-size: 18px;">Home (<strong>主頁)</strong><br></a></li>
                     <li class="nav-item"><a class="nav-link text-center" href="events.html" style="color: rgba(155,157,37,0.5);font-family: Montserrat, sans-serif;font-size: 18px;">Events (<strong>活動)</strong><br></a></li>
                     <li class="nav-item"><a class="nav-link text-center" href="about-us.html" style="color: rgba(155,157,37,0.5);font-family: Montserrat, sans-serif;font-size: 18px;">About Us (<strong>關於我們)</strong><br></a></li>
-                    <li class="nav-item"><a class="nav-link text-center active" href="donate.html" style="color: rgba(155,157,37,0.5);font-family: Montserrat, sans-serif;font-size: 18px;">Donate (<strong>捐款)</strong></a></li>
+                    <li class="nav-item"><a class="nav-link text-center active" href="donate.html" style="color: rgb(155,157,37);font-family: Montserrat, sans-serif;font-size: 18px;">Donate (<strong>捐款)</strong></a></li>
                 </ul>
             </div>
         </div>
