--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
 
 <body style="height: 1081px;background: rgb(44,43,43);">
     <main class="page"></main>
-    <div class="container">
+    <div class="container" style="height: 480px;">
         <div class="col">
             <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;width: 100%;height: 480px100%;">
                 <h2 class="text-center text-info" style="padding-bottom: 33px;text-align: center;height: 480p;">Recent Video Event</h2><iframe width="100%" height="100%" src="https://www.youtube.com/embed?listType=user_uploads&list=gondesan" frameborder="0" allowfullscreen></iframe> </div>
