--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Brand</title>
+    <title>About Us</title>
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Tp-GcHWCO_8" width="560" height="315" style="width: 100%;"></iframe></div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NCaL8re1nSg" width="560" height="315" style="width: 100%;"></iframe></div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/0GgZNhsexQw" width="560" height="315" style="width: 100%;"></iframe></div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z95RFgMr3uI" width="560" height="315"></iframe></div>
             </div>
         </div>
     </section>
