--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Brand</title>
+    <title>Events</title>
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -21,8 +21,8 @@
 <body style="height: 1081px;background: rgb(44,43,43);">
     <main class="page"></main>
     <div class="container" style="height: 480px;">
-        <div class="col">
-            <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;width: 100%;height: 480px100%;">
+        <div class="col" style="height: 100%;width: 100%;">
+            <div style="margin-right: auto;margin-left: auto;margin-top: 127px;border-style: none;width: 100%;height: 100%;">
                 <h2 class="text-center text-info" style="padding-bottom: 33px;text-align: center;height: 480p;">Recent Video Event</h2><iframe width="100%" height="100%" src="https://www.youtube.com/embed?listType=user_uploads&list=gondesan" frameborder="0" allowfullscreen></iframe> </div>
         </div>
     </div>
