--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Brand</title>
+    <title>Donate</title>
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="icon" type="image/png" sizes="44x47" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
